adding a Shader class

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <h1>Web Shader Toy</h1>
-      <canvas class="cave-generator" width="2048" height="2048">hello</canvas>
+      <canvas width="2048" height="2048">hello</canvas>
     </main>
     <include src="./src/parts/footer.part.html"></include>
     <script type="module" src="./scripts/index.ts"></script>
