65k particles at 60fps - at least on my M1

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-      <h1>Web Shader Toy</h1>
+      <h1>Web GPU: Flame Simulation</h1>
       <div class="error-box">
         <div id="no-web-gpu">
           <h3>❌ Your browser does not support WebGPU</h3>
