--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,9 @@
         </div>
       </div>
       <canvas width="2048" height="2048">hello</canvas>
+      <p class="stats">
+        Rendering <span id="particle-count"></span> particles at <span id="fps"></span>
+      </p>
     </main>
     <include src="./src/parts/footer.part.html"></include>
     <script type="module" src="./scripts/index.ts"></script>
