refactoring for syntax highlighting

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Sam Fritton | Web Shader Toy</title>
+    <title>Sam Fritton | Flame Simulation</title>
     <meta name="description" content="" />
     <meta
       name="viewport"
@@ -14,7 +14,8 @@
   </head>
   <body>
     <main>
-      <h1>Web GPU: Flame Simulation</h1>
+      <h1>Flame Simulation</h1>
+      <div class="subtitle">built with WebGPU</div>
       <div class="error-box">
         <div id="no-web-gpu">
           <h3>❌ Your browser does not support WebGPU</h3>
